# ultimate-nag52-fw-rs

./: Cargo.toml  Justfile  README.md  memory_full.x
bootloader/: Cargo.toml  README.md  build.rs
bootloader/.cargo/: config.toml
bootloader/src/: bl_info.rs  kwp.rs  main.rs
bsp/src/: can_deps.rs  lib.rs
candb_codegen/: Cargo.toml
candb_codegen/src/: code_gen.rs  lib.rs  main.rs  parser.rs
diag_common/: Cargo.toml  README.md
diag_common/src/: defmt_multi_output.rs  dyn_panic.rs  lib.rs  ram_info.rs  smarteeprom.rs
diag_common/src/hal_extensions/: dsu.rs
diag_common/src/isotp_endpoints/: can_isotp.rs  usb_isotp.rs
firmware/: Cargo.toml  build.rs
firmware/.cargo/: config.toml
firmware/can_data/: egs51.txt  egs52.txt  slave_mode.txt
firmware/src/: main.rs  maths.rs  ram_test.rs
firmware/src/calbrations/: mod.rs
firmware/src/can/: egs52.rs  input_output.rs  mod.rs  slave.rs
firmware/src/can/data/: mod.rs
firmware/src/diag/: dev_mode.rs  mod.rs
firmware/src/gearbox_control/: mod.rs  pressure_control.rs
firmware/src/hal_extension/: eic_ext.rs  evsys.rs  mod.rs  pcnt.rs  pulse_count.rs
firmware/src/sensors/: adc.rs  mod.rs  speed_sensors.rs  variable_adc_input.rs
firmware/src/solenoids/: commands.rs  mod.rs  solenoid_ctrl.rs  tcc_sol.rs  tle8242.rs
firmware/src/storage/: eeprom.rs  mod.rs
firmware/src/tasks/: diag.rs  gearbox.rs  init.rs  mod.rs  performance_monitor.rs  sensors.rs
firmware/src/usb/: mod.rs
flasher/: Cargo.toml
flasher/src/: defmt.rs  main.rs  usb_diag_compat.rs
macros/: Cargo.toml
macros/src/: lib.rs
maths/: Cargo.toml
maths/src/: egs_timers.rs  lib.rs  maps.rs
preloader/: Cargo.toml  build.rs
preloader/src/: main.rs
