[workspace]
members = ["firmware", "bsp", "bootloader", "diag_common", "preloader", "maths"]

exclude = ["candb_codegen", "flasher"]

resolver = "3"

[workspace.dependencies]
#atsamd-hal = { version = "0.23.2", features = [
#    "same54p-rt",
#    "can",
#    "async",
#    "dma",
#    "usb",
#    "defmt",
#    "usb-buffer-4k",
#] }
#atsamd-hal = { git="https://github.com/rnd-ash/atsamd/", branch="dsu-improvements", features = [
#    "same54p-rt",
#    "can",
#    "async",
#    "dma",
#    "usb",
#    "defmt",
#    "usb-buffer-4k",
#] }

atsamd-hal = { git = "https://github.com/rnd-ash/atsamd/", branch = "feat/pic32cxsg", features = [
    "pic32cxsg41128-rt",
    #"same54p-rt",
    "can",
    "async",
    "dma",
    "usb",
    "defmt",
    "usb-buffer-4k",
] }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5", features = ["device"] }
mcan = "0.7.0"
defmt = "1.0.1"
defmt-rtt = "1.1.0"

# Patch USB-Device crate to support custom Descriptor buffer size, and Support setting USB Spec V1.0/1.1
[patch.crates-io]
usb-device = { git = "https://github.com/rust-embedded-community/usb-device", rev = "a6e6c9115c54fa18c11f41c6a8fcb98dd700912b" }
