[package]
name = "bootloader"
version = "0.2.0"
edition = "2024"

[lib]
name = "bootloader"
path = "src/lib.rs"

[dependencies]
cortex-m-rt.workspace = true
bsp = { path = "../bsp" }
diag_common = { path = "../diag_common", features = ["mcu"] }
atsamd-hal = { workspace = true, features = [
    "same54p-rt",
    "can",
    "usb",
    "async",
    "rtic",
] }
cortex-m = { workspace = true, features = ["inline-asm"] }
mcan.workspace = true
konst = { version = "0.4.1", features = ["iter"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
rtic = { version = "2.2.0", features = ["thumbv7-backend"] }
automotive_diag = { version = "0.1.21", default-features = false, features = [
    "kwp2000",
] }
usbd-serial = "0.2.2"
heapless = "0.9.1"
static_assertions = "1.1.0"
rtic-sync = "1.4.0"
futures = { version = "0.3.31", default-features = false }
embedded-hal = { version = "1.0.0" }

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["now"] }
rustc_version = "0.4.1"
vergen = { version = "9.1.0" }
vergen-git2 = { version = "9.1.0" }

[features]
lib = []
skip-app-check = []
stay-in-bootloader = []

# For cargo flash
[package.metadata]
chip = "ATSAME54P20A"
