[package]
name = "diag_common"
version = "0.1.0"
edition = "2024"

[features]
mcu = [
    "dep:rtic-sync",
    "dep:defmt",
    "dep:mcan",
    "dep:futures",
    "dep:embedded-hal-async",
    "dep:usb-device",
    "dep:usbd-serial",
    "dep:nb",
    "dep:atsamd-hal"
]

defmt-serial=[]

[dependencies]
atsamd-hal = {workspace=true, optional=true}
automotive_diag = { version = "0.1.21", default-features = false, features = [
    "kwp2000",
    "defmt",
] }

rtic-sync = { version = "1.4.0", optional = true }
defmt = { version = "1.0.1", optional = true }
mcan = { workspace = true, optional = true }
futures = { version = "*", optional = true, default-features = false, features = [
    "async-await",
] }
embedded-hal-async = { version = "1.0.0", optional = true }
usb-device = { version = "0.3.2", optional = true }
usbd-serial = { version = "0.2.2", optional = true }
nb = { version = "1.1.0", optional = true }
static_assertions = "1.1.0"
embedded-crc32c = "0.1.0"
konst = { version = "0.4.1", features = ["iter"] }
