[package]
name = "diag_common"
version = "0.1.0"
edition = "2024"

[features]
mcu = [
    "dep:rtic-sync",
    "dep:defmt",
    "dep:mcan",
    "dep:futures",
    "dep:embedded-hal-async",
    "dep:usb-device",
    "dep:usbd-serial",
    "dep:nb",
    "dep:atsamd-hal",
    "dep:bitflags"
]

defmt-serial = []

[dependencies]
atsamd-hal = { workspace = true, optional = true }
automotive_diag = { version = "0.1.21", default-features = false, features = [
    "kwp2000",
    "defmt",
] }

bitflags = { version = "2.9.4", optional=true}

cortex-m = { workspace = true }
rtic-sync = { version = "1.4.0", optional = true }
defmt = { version = "1.0.1", optional = true }
mcan = { workspace = true, optional = true }
futures = { version = "*", optional = true, default-features = false, features = [
    "async-await",
] }
embedded-hal-async = { version = "1.0.0", optional = true }
usb-device = { version = "0.3.2", optional = true }
usbd-serial = { version = "0.2.2", optional = true }
nb = { version = "1.1.0", optional = true }
static_assertions = "1.1.0"
konst = { version = "0.4.1", features = ["iter"] }
bsp = { path = "../bsp" }
rtt-target = "0.6.2"
