[package]
name = "firmware"
version = "0.3.1"
edition = "2024"

[features]


[dependencies]
atsamd-hal = { workspace = true, features=["async", "dma", "rtic", "can"] }
bsp = { path = "../bsp" }
diag_common = { path = "../diag_common", features = ["mcu"] }
maths={path="../maths"}
cortex-m = { workspace = true, features = [
    "inline-asm",
    "linker-plugin-lto",
    "critical-section-single-core",
] }
cortex-m-rt.workspace = true
mcan.workspace = true
usbd-serial = "0.2.2"
automotive_diag = { version = "0.1.21", default-features = false, features = [
    "kwp2000",
] }
rtic-sync = "1.4.0"

# Format and printing
defmt.workspace = true

# RTIC
rtic = { version = "2.2.0", features = ["thumbv7-backend"] }
heapless = "0.9.1"

futures = { version = "0.3.31", default-features = false }
bitbybit = "2.0.0"
arbitrary-int = "2.0.0"
libm = "0.2.15"
bitflags = "2.9.4"
atsamd-hal-macros = "0.3.0"
seq-macro = "0.3.6"
pastey = "0.1.1"

[build-dependencies]
candb_codegen = { path = "../candb_codegen" }
chrono = { version = "0.4", default-features = false, features = ["now"] }
rustc_version = "0.4.1"
vergen = { version = "9.1.0" }
vergen-git2 = { version = "9.1.0" }

[profile.dev]
incremental = false
debug = true
lto = true

[profile.release]
debug = true
#strip="symbols"
lto = "fat"
opt-level = 3
codegen-units = 1
#panic="abort"

# For cargo flash
[package.metadata]
chip = "ATSAME54P20A"
