[package]
name = "flasher"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger="*"
diag_common = {path="../diag_common"}
log="0.4.29"
clap = { version = "4.5.60", features = ["derive"] }
color-eyre = "0.6.5"
console = "0.16.0"
ecu_diagnostics = "0.103.0"
#ecu_diagnostics = {path="../../ecu_diagnostics"}
indicatif = "0.18.0"
serialport = "4.8.1"
clap-num = "1.2.0"
chrono = "0.4.44"
elf = "0.8.0"
object = "0.38.1"
crc32fast = "1.5.0"
