[package]
name = "flasher"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "*"
diag_common = { path = "../diag_common" }
defmt-parser = "1.0.0"
log = "0.4.29"
clap = { version = "4.5.60", features = ["derive"] }
color-eyre = "0.6.5"
console = "0.16.0"
ecu_diagnostics = "0.105.0"
#ecu_diagnostics = { path = "../../ecu_diagnostics" }
indicatif = "0.18.0"
serialport = "4.9.0"
clap-num = "1.2.0"
chrono = "0.4.44"
elf = "0.8.0"
object = "0.38.1"
crc32fast = "1.5.0"
defmt-decoder = "1.1.0"
postcard = { version = "1.1.3", features = ["use-std"] }
lz4_flex = "0.13.0"
